--- a/blackjack.css
+++ b/blackjack.css
@@ -6,10 +6,13 @@ text-align: center;
 color: #fff;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 font-weight: 800;
+font-size: 3vw;
+
 }
 
 h1 {
-    color: goldenrod
+    color: goldenrod;
+    font-size: 10vw;
 }
 
 button {
@@ -17,12 +20,15 @@ button {
     border: none;
     color: #016f32;
     font-weight: 800;
-    width: 150px;
+    width: 25vw;
+    height: 5vh;
     display: block;
     margin: 4px auto;
     border-radius: 4px;
+
 }
 
 #message-el {
     font-style: italic;
 }
+
